// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remediations delete bulk plan empty list 1`] = `
{
  "errors": [
    {
      "code": "minItems.openapi.requestValidation",
      "id": "",
      "status": 400,
      "title": "must NOT have fewer than 1 items (location: body, path: remediation_ids)",
    },
  ],
}
`;

exports[`remediations delete bulk plan missing body 1`] = `
{
  "errors": [
    {
      "code": "required.openapi.requestValidation",
      "id": "",
      "status": 400,
      "title": "must have required property 'remediation_ids' (location: body, path: remediation_ids)",
    },
  ],
}
`;

exports[`remediations delete bulk plan too many IDs 1`] = `
{
  "errors": [
    {
      "code": "maxItems.openapi.requestValidation",
      "id": "",
      "status": 400,
      "title": "must NOT have more than 100 items (location: body, path: remediation_ids)",
    },
  ],
}
`;
